--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "prettier": "3.0.3",
     "supertest": "^6.3.3"
   }
 }
