--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "redis": "^4.6.7",
     "util": "^0.12.5",
     "validator": "^13.9.0",
+    "whatsapp": "^0.0.5-Alpha",
     "winston": "^3.8.2"
   },
   "devDependencies": {
